# arm-gic

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  groups  project.config
.github/workflows/: rust.yml
examples/gicv2/: .gitignore  Cargo.toml  Makefile  build.rs
examples/gicv2/src/: exceptions.rs  main.rs
examples/gicv3/: Cargo.toml  Makefile  build.rs
examples/gicv3/src/: main.rs
src/: gicv2.rs  gicv3.rs  lib.rs  sysreg.rs
src/gicv2/: registers.rs
src/gicv3/: cpu_interface.rs  distributor.rs  redistributor.rs  registers.rs
src/sysreg/: aarch32.rs  aarch64.rs  fake.rs
