[package]
name = "arm-gic"
version = "0.8.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A driver for the Arm Generic Interrupt Controller version 2, 3 or 4."
authors = [
  "Andrew Walbran <qwandor@google.com>",
  "Fritz Stracke <fritz.stracke@rwth-aachen.de>",
]
repository = "https://git.trustedfirmware.org/arm-firmware-crates/arm-gic.git"
keywords = ["arm", "aarch64", "driver", "gic", "interrupt-controller"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
arm-sysregs = { version = "0.2.6", features = ["el1"] }
bitflags = "2.11.0"
safe-mmio = "0.3.0"
thiserror = { version = "2.0.18", default-features = false }
zerocopy = { version = "0.8.42", features = ["derive"] }

[dev-dependencies]
arm-sysregs = { version = "0.2.6", features = ["fakes"] }

[features]
el2 = ["arm-sysregs/el2"]
el3 = ["el2", "arm-sysregs/el3"]
fakes = ["arm-sysregs/fakes"]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-none"
features = ["el2", "el3"]
rustdoc-args = ["--cfg", "docsrs"]
